# hackathon-tellchima

./: README.md
allenloo/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  tellchima.cabal
allenloo/app/: Main.hs  Types.hs
allenloo/app/Controller/Action/: PostReminder.hs
allenloo/app/Controller/Message/: Publish.hs
allenloo/app/Controller/Webhook/: TellChima.hs
allenloo/app/Database/Entity/: Message.hs
allenloo/app/Database/Migration/: 20221230163713_create_messages_table.sql
allenloo/app/Database/Repository/: MessageRepository.hs
allenloo/app/Model/: AppConfig.hs  AppDependencies.hs  ErrorResponse.hs  PostSlackMessageRequest.hs  TellChimaException.hs  TellChimaWebhookRequest.hs  TellChimaWebhookResponse.hs
allenloo/app/Service/: MessageBuilder.hs  Slack.hs
allenloo/app/Utils/: AppConfig.hs  Database.hs  VerifyApiKey.hs  VerifySlackWebhookSignature.hs
limouren/: .gitignore  Makefile  README.md  mix.exs  shell.nix
limouren/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
limouren/lib/: tellchima.ex  tellchima_web.ex
limouren/lib/tellchima/: application.ex  mailer.ex  repo.ex
limouren/lib/tellchima_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
limouren/lib/tellchima_web/controllers/: page_controller.ex
limouren/lib/tellchima_web/templates/layout/: root.html.heex
limouren/lib/tellchima_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
limouren/priv/repo/: seeds.exs
limouren/test/: test_helper.exs
limouren/test/support/: conn_case.ex  data_case.ex
limouren/test/tellchima_web/controllers/: page_controller_test.exs
limouren/test/tellchima_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
samchan/: .env  .env.example  Cargo.toml  Makefile  README.md  docker-compose.yaml  flake.nix
samchan/migrations/2022-12-29-063934_create_messages/: up.sql
samchan/src/: lib.rs  main.rs  message_service.rs  models.rs  schema.rs  slack_service.rs  utils.rs
samchan/src/handlers/: command_handler.rs  hello_handler.rs
samchan/src/models/: db.rs  errors.rs
samchan/src/services/: message_service.rs  slack_service.rs
yusan/: README.md
yusan/listener/: .env.example  .gitignore  Makefile  README.md  app.eml.ml  dune  dune-project  package.json
yusan/listener/db/migrations/: 20230114215049_create_message_table.sql
yusan/publisher/: .env.example  Makefile  README.md  go.mod  publisher.go
