cabal-version:      2.4
name:               tellchima
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             axolotl0212
maintainer:         allenl0212@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tellchima
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Controller.Webhook.TellChima
        Model.TellChimaWebhookRequest
        Model.TellChimaException
        Model.ErrorResponse

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        warp ==3.3.23,
        wai ==3.2.3,
        http-types ==0.12.3,
        aeson ==2.1.1.0,
        utf8-string ==1.0.2,
        http-api-data ==0.5
    hs-source-dirs: app
    default-language: Haskell2010
