[package]
name = "tell-machi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = {version = "1.0.152", features=["derive"]}
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
derive_more = "0.99.17"
rand = "0.8.5"
