[package]
name = "tell-machi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = {version = "1.0.152", features=["derive"]}
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15"
derive_more = "0.99.17"
rand = "0.8.5"
reqwest = "0.11.13"
regex = "1.7.0"
anyhow = "1.0"
hmac = "0.12.1"
sha2 = "0.10.6"
hex-literal = "0.3.4"
hex = "0.4.3"
serde_urlencoded = "0.7.1"


